# STM32L4-Discovery-Kit

./: .gitmodules  platformio.ini
.github/workflows/: codeql-analysis.yml
include/: i2c2.h
lib/fifo/include/: fifo.h
lib/fifo/src/: fifo.c
projects/blink_baremetal/: CMakeLists.txt  arm-none-eabi.cmake
projects/blink_baremetal/src/: main.c  startup_stm32l475vg.s  stm32l475vg.ld
src/: i2c2.c  main.c
test/: test_fifo.c  unittest_transport.c  unittest_transport.h
